# journal-search-workaround

./: Dockerfile  app.py  journal_search.py  pyproject.toml  requirements.txt
