[tool.poetry]
name = "journal-search-workaround"
version = "0.1.0"
description = "Simple workaround to search an display journal records from labs"
authors = ["Micha Moskovic <michamos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
